@@ -53,6 +53,9 @@ Changes in Go4 v4.3.2 (September 09)
    This simplify gui handling when running analysis from other shell.
    Especially useful when running analysis with go4analysis executable like:
    "go4analysis -server -stream mbshost" 
+9. From gui one can launch analysis without shell, just with simple exec command.
+   This solves problem, when ssh requires running DNS even when launching analysis 
+   on the same node.  
    
 
 Changes in Go4 v4.3.1 (August 09)
